--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex01.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex01.html
@@ -24,6 +24,8 @@
   <!-- Parágrafo com a classe .destaque aplicada -->
   <p class="destaque">Este é um exemplo de parágrafo com destaque.</p>
 
+  <a href="../index.html">../index.html</a>
+
 </body>
 
 </html>
