--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex05.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex05.html
@@ -38,6 +38,7 @@
     <!-- Elemento quadrado que será animado -->
     <div class="quadrado"></div>
 
+    <a href="../index.html">../index.html</a>
 </body>
 
 </html>
