--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex07.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex07.html
@@ -64,14 +64,16 @@
 
     <ul>
         <li>
-            O formulário está contido em um <code> <div></code> com a classe .form-container, que define a largura
+            O formulário está contido em um [div] com a classe .form-container, que define a largura
             máxima, o preenchimento, a cor de fundo, o raio de borda e a sombra para melhorar a aparência.</li>
         <li>Os campos de entrada de texto e a área de texto têm largura de 100%, preenchimento interno, margem, borda
             sólida, borda arredondada e tamanho de caixa de conteúdo para uma aparência uniforme.</li>
-        <li> O botão de envio (<code><button></code>) tem largura de 100%, preenchimento interno, cor de fundo, cor do
+        <li> O botão de envio ([button]) tem largura de 100%, preenchimento interno, cor de fundo, cor do
             texto, borda sem estilo, borda arredondada e cursor de apontador. Além disso, tem uma regra de estilo de
             hover para alterar a cor de fundo quando o mouse passa por cima.</li>
     </ul>
+
+    <a href="../index.html">../index.html</a>
 
 </body>
 
