--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex08.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex08.html
@@ -34,6 +34,8 @@
     <!-- Botão com efeito de hover -->
     <button class="meu-botao">Botão com Hover</button>
 
+    <a href="../index.html">../index.html</a>
+
 </body>
 
 </html>
