--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex02.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 03/Respostas Exercícios/Exercicios/Exercicios/wwwroot/Respostas/Ex02.html
@@ -40,7 +40,7 @@
 
 <body>
 
-    <h1>Crie uma lista não ordenada (<ul>) e estilize os itens da lista para terem uma cor de fundo cinza claro e uma
+    <h1>Crie uma lista não ordenada (ul) e estilize os itens da lista para terem uma cor de fundo cinza claro e uma
             borda sólida de 1px em volta. Use pseudo-classes para estilizar os itens da lista ao passar o mouse sobre
             eles.</h1>
 
@@ -52,6 +52,8 @@
         <li>Item 4</li>
         <li>Item 5</li>
     </ul>
+
+    <a href="../index.html">../index.html</a>
 
 </body>
 
