--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta01.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta01.html
@@ -57,6 +57,7 @@
     <!-- Rodapé -->
     <footer class="bg-dark text-light text-center py-3">
         <div class="container">
+            <p>Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
             <a href="../index.html">Início</a>
             <p>&copy; 2024 Meu Site</p>
         </div>
