--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta02.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta02.html
@@ -1,16 +1,83 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <title>Resposta 01 </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minha Página Responsiva</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 <body>
 
-    <footer>
-        <a href="../index.html">Início</a>
+    <!--Modifique o layout criado no exercício 1 para que seja totalmente responsivo, ou seja, deve se ajustar bem em telas de diferentes tamanhos, desde smartphones até desktops.-->
+    <!--Neste exemplo, usei a classe container para envolver todo o conteúdo e a classe container dentro das seções para garantir que o conteúdo permaneça centralizado e responsivo. Para a seção principal, usei a classe col-lg-8 offset-lg-2 para garantir que o conteúdo seja exibido em uma largura de 8 colunas no layout grande (desktop) e centralizado horizontalmente. O offset-lg-2 cria um espaço em branco equivalente a 2 colunas no lado esquerdo. Isso garante que o conteúdo fique alinhado com a barra de navegação.-->
+    <!-- Cabeçalho -->
+    <header>
+        <div class="container">
+            <h1>Meu Site</h1>
+        </div>
+    </header>
+
+    <!-- Barra de Navegação -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Seção Principal -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <h2 class="text-center">Seção Principal</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur neque id ante vehicula, ac consectetur tortor ultricies. Sed ullamcorper felis in nunc fermentum elementum. Nulla facilisi.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer class="bg-dark text-light text-center py-3">
+        <div class="container">
+            <p>Neste exemplo, usei a classe container para envolver todo o conteúdo e a classe container dentro das seções para garantir que o conteúdo permaneça centralizado e responsivo. Para a seção principal, usei a classe col-lg-8 offset-lg-2 para garantir que o conteúdo seja exibido em uma largura de 8 colunas no layout grande (desktop) e centralizado horizontalmente. O offset-lg-2 cria um espaço em branco equivalente a 2 colunas no lado esquerdo. Isso garante que o conteúdo fique alinhado com a barra de navegação.</p>
+            <a href="../index.html">Início</a>
+            <p>&copy; 2024 Meu Site</p>
+        </div>
     </footer>
+
+    <!-- Bootstrap JavaScript (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
