--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta03.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta03.html
@@ -1,16 +1,45 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <title>Resposta 01 </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid Layout com Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-    <footer>
-        <a href="../index.html">Início</a>
-    </footer>
+    <div class="container">
+        <div class="row">
+            <!-- Primeira coluna -->
+            <div class="col-md-4">
+                <div class="p-3 bg-primary text-white">
+                    <h2>Coluna 1</h2>
+                    <p>Conteúdo da primeira coluna</p>
+                </div>
+            </div>
+
+            <!-- Segunda coluna -->
+            <div class="col-md-4">
+                <div class="p-3 bg-secondary text-white">
+                    <h2>Coluna 2</h2>
+                    <p>Conteúdo da segunda coluna</p>
+                </div>
+            </div>
+
+            <!-- Terceira coluna -->
+            <div class="col-md-4">
+                <div class="p-3 bg-info text-white">
+                    <h2>Coluna 3</h2>
+                    <p>Conteúdo da terceira coluna</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <a href="../index.html">Início</a>
+
+    <!-- Bootstrap JavaScript (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
