--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta05.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta05.html
@@ -1,16 +1,74 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <title>Resposta 01 </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário com Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-    <footer>
-        <a href="../index.html">Início</a>
-    </footer>
+    <div class="container mt-5">
+        <h2>Formulário com Bootstrap</h2>
+        <form>
+            <div class="mb-3">
+                <label for="exampleInputName" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="exampleInputName" placeholder="Digite seu nome">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite seu email">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword" class="form-label">Senha</label>
+                <input type="password" class="form-control" id="exampleInputPassword" placeholder="Digite sua senha">
+            </div>
+            <div class="mb-3">
+                <label for="exampleSelect" class="form-label">Selecione</label>
+                <select class="form-select" id="exampleSelect">
+                    <option>Opção 1</option>
+                    <option>Opção 2</option>
+                    <option>Opção 3</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadio1" value="option1" checked>
+                    <label class="form-check-label" for="exampleRadio1">
+                        Opção 1
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadio2" value="option2">
+                    <label class="form-check-label" for="exampleRadio2">
+                        Opção 2
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadio3" value="option3">
+                    <label class="form-check-label" for="exampleRadio3">
+                        Opção 3
+                    </label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="exampleCheckbox">
+                    <label class="form-check-label" for="exampleCheckbox">
+                        Concordo com os termos
+                    </label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </div>
+
+
+    <a href="../index.html">Início</a>
+
+
+    <!-- Bootstrap JavaScript (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
