--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/index.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        function Mudarestado(el) {
+            var display = document.getElementById(el).style.display;
+            if (display == "none")
+                document.getElementById(el).style.display = 'block';
+            else
+                document.getElementById(el).style.display = 'none';
+        }
+    </script>
 </head>
 <body>
 
@@ -47,23 +57,49 @@
             <div class="col-sm-3">
                 <h3>&#128512; Exercício 01 - Criação de um layout básico:</h3>
                 <p>Crie uma página HTML usando Bootstrap v5 que tenha um cabeçalho, uma barra de navegação, uma seção principal com algumas informações de texto e uma seção de rodapé.</p>
-                <a href="respostas/resposta01.html">respostas/resposta01.html</a>
+            
+                <div id="div01" style="display:none">
+                    <p>Aqui está um exemplo de como você pode criar uma página HTML básica usando Bootstrap v5 com um cabeçalho, barra de navegação, seção principal e rodapé:</p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta01.html">respostas/resposta01.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div01')">Mostrar / Esconder</button>
             </div>
             <div class="col-sm-3">
                 <h3>&#128512; Exercício 02 - Responsividade</h3>
                 <p>Modifique o layout criado no exercício 1 para que seja totalmente responsivo, ou seja, deve se ajustar bem em telas de diferentes tamanhos, desde smartphones até desktops.</p>
-                <a href="respostas/resposta02.html">respostas/resposta02.html</a>
+                
+                <div id="div02" style="display:none">
+                    <p>Para tornar o layout totalmente responsivo, podemos usar as classes de grid do Bootstrap para garantir que os elementos se ajustem automaticamente em telas de diferentes tamanhos. Aqui está o código HTML atualizado:</p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta02.html">respostas/resposta02.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div02')">Mostrar / Esconder</button>
             </div>
             <div class="col-sm-3">
                 <h3>&#128512; Exercício 03 - Grid System:</h3>
                 <p>Crie uma grade de layout usando o sistema de grid do Bootstrap v5. Divida a página em pelo menos 3 colunas e faça com que essas colunas sejam responsivas.</p>
-                <a href="respostas/resposta03.html">respostas/resposta03.html</a>
+
+
+                <div id="div03" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta03.html">respostas/resposta03.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div03')">Mostrar / Esconder</button>
             </div>
 
             <div class="col-sm-3">
                 <h3>&#128512; Exercício 04 - Botões:</h3>
                 <p>Crie uma série de botões com diferentes estilos e tamanhos fornecidos pelo Bootstrap v5. Experimente os estilos padrão, outline e os diferentes tamanhos disponíveis.</p>
-                <a href="respostas/resposta04.html">respostas/resposta04.html</a>
+
+
+                <div id="div04" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta04.html">respostas/resposta04.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div04')">Mostrar / Esconder</button>
             </div>
         </div>
 
@@ -71,23 +107,50 @@
             <div class="col-sm-3">
                 <h3>&#128522; Exercício 05</h3>
                 <p>Crie um formulário básico usando os estilos de formulário fornecidos pelo Bootstrap v5. Inclua campos de texto, caixas de seleção, botões de rádio e uma caixa de seleção.</p>
-                <a href="respostas/resposta05.html">respostas/resposta05.html</a>
+
+                <div id="div05" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta05.html">respostas/resposta05.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div05')">Mostrar / Esconder</button>
             </div>
             <div class="col-sm-3">
                 <h3>&#128522;Exercício 06</h3>
                 <p>Crie um carrossel de imagens usando o componente de carrossel fornecido pelo Bootstrap v5. Adicione pelo menos 3 imagens ao carrossel e configure-o para avançar automaticamente.</p>
-                <a href="respostas/resposta06.html">respostas/resposta06.html</a>
+
+
+                <div id="div06" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta06.html">respostas/resposta06.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div06')">Mostrar / Esconder</button>
             </div>
             <div class="col-sm-3">
                 <h3>&#128522;Exercício 07</h3>
                 <p>Utilize os alertas do Bootstrap v5 para exibir mensagens de sucesso, aviso e erro em sua página. Estilize cada tipo de alerta de forma diferente.</p>
-                <a href="respostas/resposta07.html">respostas/resposta07.html</a>
+
+
+                <div id="div07" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta07.html">respostas/resposta07.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div07')">Mostrar / Esconder</button>
             </div>
 
             <div class="col-sm-3">
                 <h3>&#128522;Exercício 08</h3>
                 <p>Crie um conjunto de abas usando o componente de abas do Bootstrap v5. Cada aba deve conter algum conteúdo único.</p>
-                <a href="respostas/resposta08.html">respostas/resposta08.html</a>
+
+
+                <div id="div08" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta08.html">respostas/resposta08.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div08')">Mostrar / Esconder</button>
             </div>
         </div>
 
@@ -95,12 +158,26 @@
             <div class="col-sm-6">
                 <h3>&#128526;Exercício 09</h3>
                 <p>Implemente um modal usando o componente de modal do Bootstrap v5. Configure-o para ser aberto automaticamente quando a página carregar e inclua algum conteúdo dentro dele.</p>
-                <a href="respostas/resposta09.html">respostas/resposta09.html</a>
+
+
+                <div id="div09" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta09.html">respostas/resposta09.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div09')">Mostrar / Esconder</button>
             </div>
             <div class="col-sm-6">
                 <h3>&#128526;Exercício 10</h3>
                 <p>Faça a barra de navegação do exercício 1 se tornar fixa no topo da página à medida que o usuário rola para baixo. Certifique-se de que o conteúdo da página não seja obscurecido pela barra de navegação.</p>
-                <a href="respostas/resposta10.html">respostas/resposta10.html</a>
+
+
+                <div id="div10" style="display:none">
+                    <p></p>
+                    <p>Certifique-se de ajustar os links do Bootstrap para a versão correta, pois a versão 5.3.0-alpha1 pode ser atualizada no futuro. Essa página inclui um cabeçalho simples, uma barra de navegação com três itens, uma seção principal com um título e algum texto de exemplo, e um rodapé contendo o ano e o nome do site.</p>
+                    <a href="respostas/resposta10.html">respostas/resposta10.html</a>
+                </div>
+                <button type="button" onclick="Mudarestado('div10')">Mostrar / Esconder</button>
             </div>
         </div>
     </div>
