--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta09.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta09.html
@@ -1,16 +1,54 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <title>Resposta 01 </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modal com Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-    <footer>
-        <a href="../index.html">Início</a>
-    </footer>
+    <!-- Botão de acionamento do modal (oculto) -->
+    <button type="button" class="btn btn-primary d-none" data-bs-toggle="modal" data-bs-target="#exampleModal" id="openModal">
+        Abrir Modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Título do Modal</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Este é o conteúdo do modal. Você pode adicionar qualquer coisa aqui, como texto, imagens, formulários, etc.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-primary">Salvar mudanças</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <a href="../index.html">Início</a>
+
+    <!-- Bootstrap JavaScript (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+    <!-- JavaScript para abrir o modal automaticamente -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var myModal = new bootstrap.Modal(document.getElementById('exampleModal'), {
+                backdrop: 'static', // Impede o fechamento clicando fora do modal
+                keyboard: false // Impede o fechamento ao pressionar a tecla 'Esc'
+            });
+            myModal.show(); // Mostra o modal automaticamente ao carregar a página
+        });
+    </script>
 </body>
 </html>
