--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta10.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercicios Resolvidos/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta10.html
@@ -1,16 +1,66 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <title>Resposta 01 </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página com Barra de Navegação Fixa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 <body>
 
-    <footer>
-        <a href="../index.html">Início</a>
-    </footer>
-</body>
-</html>
+    <!-- Barra de Navegação Fixa -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Conteúdo da Página -->
+    <div class="container mt-5 pt-5">
+        <header>
+            <h1>Bem-vindo à Página</h1>
+        </header>
+
+        <section>
+            <h2>Seção Principal</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur neque id ante vehicula, ac consectetur tortor ultricies. Sed ullamcorper felis in nunc fermentum elementum. Nulla facilisi.</p>
+        </section>
+
+        <!-- Seção Principal -->
+        <section class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2">
+                        <h2 class="text-center">Seção Principal</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla conse
