--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta04.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta04.html
@@ -9,6 +9,47 @@
 </head>
 <body>
 
+    <!--Crie uma série de botões com diferentes estilos e tamanhos fornecidos pelo Bootstrap v5.
+    Experimente os estilos padrão, outline e os diferentes tamanhos disponíveis.-->
+    <div class="row">
+        <div class="col-md-2"><button type="button" class="btn btn-primary">Primary</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-secondary">Secondary</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-success">Success</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-danger">Danger</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-warning">Warning</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-info">Info</button></div>
+    </div>
+    <div class="row">
+        <div class="col-md-4"><button type="button" class="btn btn-light">Light</button></div>
+        <div class="col-md-4"><button type="button" class="btn btn-dark">Dark</button></div>
+        <div class="col-md-4"><button type="button" class="btn btn-link">Link</button></div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-2"><button type="button" class="btn btn-outline-primary">Primary</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-outline-secondary">Secondary</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-outline-success">Success</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-outline-danger">Danger</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-outline-warning">Warning</button></div>
+        <div class="col-md-2"><button type="button" class="btn btn-outline-info">Info</button></div>
+    </div>
+    <div class="row">
+        <div class="col-md-4"><button type="button" class="btn btn-outline-light">Light</button></div>
+        <div class="col-md-4"><button type="button" class="btn btn-outline-dark">Dark</button></div>
+        <div class="col-md-4"><button type="button" class="btn btn-outline-link">Link</button></div>
+    </div>
+
+    <div class="row">
+        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+        <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+    </div>
+
+    <div class="row">
+        <button type="button" class="btn btn-primary btn-sm">Small button</button>
+        <button type="button" class="btn btn-secondary btn-sm">Small button</button>
+    </div>
+
     <footer>
         <a href="../index.html">Início</a>
     </footer>
