--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta01.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta01.html
@@ -4,13 +4,49 @@
     <meta charset="utf-8" />
     <title>Resposta 01 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
-    <footer>
-        <a href="../index.html">Início</a>
-    </footer>
+    <!--😀 Solução 01 - Criação de um layout básico:
+    Crie uma página HTML usando Bootstrap v5 que tenha um cabeçalho,uma barra de navegação,
+        uma seção principal com algumas informações de texto e uma seção de rodapé.-->
+    <!--Cabeçalho-->
+    <header>
+        <div class="container">
+            <h1>Conferência Científica</h1>
+        </div>
+    </header>
+
+    <!--Barra de navegação-->
+    <div class="container">
+        <nav class="navbar navbar-expand navbar-dark bg-dark">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Palestras</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">Palestrantes</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Artigos</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Inscrições</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Participantes</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <!--Seção Principal-->
+    <main>
+        <div class="container">
+            <h2>Seção Principal</h2>
+            <p>Texto exemplo ...</p>
+            <p>Texto exemplo 2 ...</p>
+        </div>
+    </main>
+
+    <div class="container">
+        <footer class="bg-dark text-light">
+            <a href="../index.html">Início</a>
+        </footer>
+    </div>
 </body>
 </html>
