--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta02.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta02.html
@@ -4,13 +4,62 @@
     <meta charset="utf-8" />
     <title>Resposta 01 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>Conferência Científica</h1>
+        </div>
+    </header>
 
-    <footer>
-        <a href="../index.html">Início</a>
-    </footer>
+    <!--Modifique o layout criado no Solução 1 para que seja totalmente responsivo,
+        ou seja, deve se ajustar bem em telas de diferentes tamanhos,
+        desde smartphones até desktops.-->
+    <!--Barra de navegação-->
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#barranavegacao"
+                    aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="barranavegacao">
+                <!--collapse-->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Palestras</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#">Palestrantes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Artigos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Inscrições</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Participantes</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <!--Seção Principal-->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-2">
+                    <h2>Seção Principal</h2>
+                    <p>Texto exemplo ...</p>
+                    <p>Texto exemplo 2 ...</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+   
+    <footer class="bg-dark text-light">
+        <div class="container">
+            <a href="../index.html">Início</a>
+        </div>
+    </footer>    
 </body>
 </html>
