--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta03.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta03.html
@@ -2,12 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Resposta 01 </title>
+    <title>Resposta 03 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+
+    <!--Crie uma grade de layout usando o sistema de grid do Bootstrap v5. 
+        Divida a página em pelo menos 3 colunas e faça com que essas colunas sejam responsivas.-->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 bg-dark">Coluna 01</div>
+            <div class="col-md-4 bg-danger">Coluna 02</div>
+            <div class="col-md-2 offset-2 bg-info">Coluna 03</div>
+        </div>
+    </div>
 
     <footer>
         <a href="../index.html">Início</a>
