--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta08.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta08.html
@@ -9,6 +9,25 @@
 </head>
 <body>
 
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+            <p>Funciona pagina 01</p>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+            <p>Funciona pagina 02</p>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+            <p>Funciona pagina 03</p>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+            <p>Funciona pagina 04</p>
+        </li>
+    </ul>
+
     <footer>
         <a href="../index.html">Início</a>
     </footer>
