--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta06.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta06.html
@@ -8,6 +8,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../img/img01.jpg" />
+            </div>
+            <div class="carousel-item">
+                <img src="../img/img2.jpg" />
+            </div>
+            <div class="carousel-item">
+                oi eu sou o texto
+            </div>
+            <div class="carousel-item">
+                <img src="../img/img3.jpg" />
+            </div>
+            <div class="carousel-item">
+                <img src="../img/palestrante01.jpg" />
+            </div>
+            <div class="carousel-item">
+                <img src="../img/palestrante02.jpg" />
+            </div>
+            <div class="carousel-item">
+                <img src="../img/palestrante03.jpg" />
+            </div>
+            <div class="carousel-item">
+                oi eu sou o texto
+            </div>
+        </div>
+    </div>
 
     <footer>
         <a href="../index.html">Início</a>
