--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta07.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 04/Exercícios Início/ExerciciosBootstrap/ExerciciosBootstrap/wwwroot/respostas/resposta07.html
@@ -2,12 +2,33 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Resposta 01 </title>
+    <title>Resposta 07 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+
+    <!--Utilize os alertas do Bootstrap v5 para exibir mensagens de sucesso, aviso e erro em sua página. 
+        Estilize cada tipo de alerta de forma diferente.-->
+
+    <div class="container">
+        <div class="alert alert-danger" role="alert" style="display:none">Mensagem de Erro</div>
+        <div class="alert alert-primary" role="alert" style="display:none">Mensagem OK</div>
+        <div class="alert alert-warning" role="alert" style="display:none" id="estado">Mensagem de Warning</div>
+    </div>
+
+    <button onclick="minhaFunc()">Meu botao </button>
+
+    <script>
+        function minhaFunc() {
+            if (document.getElementById("estado").style.display == "block") {
+                document.getElementById("estado").style.display = "none";
+            } else {
+                document.getElementById("estado").style.display = "block";
+            }            
+        }
+    </script>
 
     <footer>
         <a href="../index.html">Início</a>
