--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 06/InicioTypeScript/ContinuacaoTypeScript/wwwroot/index.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 06/InicioTypeScript/ContinuacaoTypeScript/wwwroot/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="ts/playground.js"></script>
-    
-
+    <script src="js/JavaScript.js"></script>
+    <script src="ts/Main.js"></script>
 </head>
 <body>
-    <input type="button" id="meuBotao" />
+
+
+
 </body>
 </html>
