Exemplo da aula

--- a/src/Fundamentos de HTML5, CSS e Javascript/Aula 08/JQueryPlayground/JQueryPlayground/wwwroot/index.html
+++ b/src/Fundamentos de HTML5, CSS e Javascript/Aula 08/JQueryPlayground/JQueryPlayground/wwwroot/index.html
@@ -36,6 +36,21 @@
         <h1 class="minhaClasse">Minha div2 </h1>
     </div>
 
+
+    <input type="button" id="btnAjax" value="Buscar Conteúdo Do Google"/>
+    <div id="ConteudoGoogle" style="background-color:lime">
+
+    </div>
+
+
+    <input type="button" id="btnBuscarApi" value="Buscar API" />
+    <textarea id="txtResultadoJSON">    
+    </textarea>
+
+
+    <input type="button" id="btnCriarApi" value="Criar API" />
+
+
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/index.js"></script>
